force-app/main/default/objects/DuplicateSettings__mdt/DuplicateSettings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the Duplicate Management feature. Use the Default record to configure cron expression, score threshold, enabled objects, and batch scope.</description>
    <label>Duplicate Settings</label>
    <pluralLabel>Duplicate Settings</pluralLabel>
</CustomObject>