force-app/main/default/objects/DuplicateSettings__mdt/fields/BatchCronExpression__c.field-meta.xml
<CustomField>
    <fullName>BatchCronExpression__c</fullName>
    <label>Batch Cron Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>