force-app/main/default/objects/DuplicateSettings__mdt/fields/BatchScope__c.field-meta.xml
<CustomField>
    <fullName>BatchScope__c</fullName>
    <label>Batch Scope</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>