force-app/main/default/objects/DuplicateSettings__mdt/fields/EnabledObjects__c.field-meta.xml
<CustomField>
    <fullName>EnabledObjects__c</fullName>
    <label>Enabled Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>