force-app/main/default/objects/DuplicateSettings__mdt/fields/ScoreThreshold__c.field-meta.xml
<CustomField>
    <fullName>ScoreThreshold__c</fullName>
    <label>Score Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>